# avosetta

./: Cargo.toml  README.md
.github/workflows/: build.yaml  publish.yaml  pull_request_check.yaml
crates/avosetta/: Cargo.toml
crates/avosetta-macros/: Cargo.toml
crates/avosetta-macros/src/: ast.rs  completion.rs  generate.rs  lib.rs  parse.rs
crates/avosetta/src/: lib.rs
