[package]
name = "avosetta-macros"
description = "Rust-native HTML templates with compile-time optimization."
version = "0.2.1"
authors = ["Callum Hopkins"]
edition = "2024"
license = "MIT"
repository = "https://github.com/callum-hopkins-dev/avosetta"
readme = "README.md"
documentation = "https://docs.rs/avosetta"
keywords = ["web", "proc-macro", "html", "template", "encode"]
categories = ["web-programming", "template-engine", "encoding"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.46"
syn = { version = "2.0.119", default-features = false, features = [
  "proc-macro",
  "printing",
  "parsing",
  "full",
] }
