[package]
name = "avosetta"
description = "Rust-native HTML templates with compile-time optimization."
version = "0.2.2"
authors = ["Callum Hopkins"]
edition = "2024"
license = "MIT"
repository = "https://github.com/callum-hopkins-dev/avosetta"
readme = "README.md"
documentation = "https://docs.rs/avosetta"
keywords = ["web", "proc-macro", "html", "template", "encode"]
categories = ["web-programming", "template-engine", "encoding"]

[dependencies]
avosetta-macros = { version = "0.2.2", path = "../avosetta-macros", optional = true }
itoa = "1.0.18"
ryu = "1.0.23"

[features]
default = ["macros"]
macros = ["dep:avosetta-macros"]
